Closed Bug 723249 Opened 13 years ago Closed 13 years ago

JSString::dump, JSString::equals, JSObject::dump debug-only helpers

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla13

People

(Reporter: Waldo, Assigned: Waldo)

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
No description provided.
Attachment #593560 - Flags: review?(luke)
Comment on attachment 593560 [details] [diff] [review] Patch Review of attachment 593560 [details] [diff] [review]: ----------------------------------------------------------------- Nice. I would send an email to dev-internals announcing new str->equals and x->dump powers. ::: js/src/jsfriendapi.cpp @@ +404,5 @@ > + atom->dump(); > +} > + > +extern void > +dumpChars(const jschar *s, size_t n) DumpChars, please
Attachment #593560 - Flags: review?(luke) → review+
Assignee: general → jwalden+bmo
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla13
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: