Bug 723249 - Implement a dump() function on JSString, JSAtom, and JSObject, for easier typing than js_Dump*.  Also implement JSString::equals.  r=luke