js/src/vm/String.h
@@ -425,6 +425,11 @@ class JSString : public js::gc::Cell
     static inline void readBarrier(JSString *str);
 
     static inline js::ThingRootKind rootKind() { return js::THING_ROOT_STRING; }
+
+#ifdef DEBUG
+    void dump();
+    bool equals(const char *s);
+#endif
 };
 
 class JSRope : public JSString
@@ -698,6 +703,10 @@ class JSAtom : public JSFixedString
     inline js::PropertyName *asPropertyName();
 
     inline void finalize(JSRuntime *rt);
+
+#ifdef DEBUG
+    void dump();
+#endif
 };
 
 JS_STATIC_ASSERT(sizeof(JSAtom) == sizeof(JSString));
